# rxiv-maker

./: .bandit  .dockerignore  .env  .gitattributes  .gitignore  .gptignore  .pre-commit-config.yaml  00_ARTICLE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  STRUCTURE.md  _typos.toml  article_forge_colab.ipynb  config.yml  debug_conversion.py  debug_regex.py  docker-compose.yml  docker.sh  noxfile.py  prepare_arxiv.py  pyproject.toml  requirements.txt  rxiv_forge_colab.ipynb  rxiv_maker_colab.ipynb  test_simple.py  test_table_formatting.py  versioneer.py
.github/workflows/: build-pdf.yml  claude-code-review.yml  claude.yml  docker-publish.yml  release.yml  test-generation.yml
ARTICLE/: 00_ARTICLE.md  02_REFERENCES.bib
ARTICLE/FIGURES/: Figure_1.mmd  Figure_2.py
EXAMPLE_MANUSCRIPT/: 00_CONFIG.yml  00_MANUSCRIPT.md  01_MAIN.md  02_SUPPLEMENTARY_INFO.md  03_REFERENCES.bib
EXAMPLE_MANUSCRIPT/FIGURES/: Figure_1.mmd  Figure_2.mmd  Figure_2.py  SFigure_1.mmd  SFigure_2.mmd  SFigure_2.py  SFigure_3.R  SFigure_3.py
EXAMPLE_MANUSCRIPT/FIGURES/DATA/SFigure_3/: arxiv_monthly_submissions.csv  pubmed_by_year.csv
FIGURES/: Figure_2.py
MANUSCRIPT/: 00_CONFIG.yml  00_MANUSCRIPT.md  00_MANUSCRIPT.md.old  01_MAIN.md  02_REFERENCES.bib  02_SUPPLEMENTARY_INFO.md  03_REFERENCES.bib
MANUSCRIPT/FIGURES/: README.md  example_figure.py  sample_plot.py  supplementary_figure.py  workflow.mmd
MANUSCRIPT/FIGURES/DATA/: example_data.csv  sample_data.csv
docs/: DOCKER_SETUP.md  architecture.md  github-actions-guide.md  troubleshooting-missing-figures.md  user_guide.md  validate_manuscript.md
docs/api/: README.md  __init__.py.md  _version.py.md  analyze_word_count.py.md  author_processor.py.md  base_validator.py.md  copy_pdf.py.md  custom_doc_generator.py.md  debug_conversion.py.md  debug_regex.py.md  email_encoder.py.md  fix_minted.py.md  generate_docs.py.md  generate_figures.py.md  generate_preprint.py.md  index.html  index.md  py.html  template_processor.py.md  types.py.md  utils.py.md  validate.py.md  validate_manuscript.py.md  yaml_processor.py.md
docs/api/py/: _version.html  commands.html  converters.html  processors.html  template_processor.html  utils.html
docs/api/py/commands/: copy_pdf.html  generate_docs.html  generate_figures.html  generate_preprint.html
docs/api/py/converters/: citation_processor.html  code_processor.html  figure_processor.html  html_processor.html  list_processor.html  md2tex.html  md2tex_new.html  section_processor.html  supplementary_note_processor.html  table_processor.html  text_formatters.html  types.html  url_processor.html
docs/api/py/processors/: author_processor.html  template_processor.html  yaml_processor.html
docs/tutorials/: github_actions.md  google_colab.md
notebooks/: rxiv_maker_YAML_editor.ipynb  rxiv_maker_colab.ipynb
scripts/: build.sh  clean.sh  validate_manuscript.py
scripts/figures/: README.md  __init__.py  config.yml  generate_all.py  generate_enhanced_mermaid.py  generate_figure1.py  generate_figure2.py  generate_mermaid.py  mermaid_generator.py  test_figures.py
scripts/figures/config/: __init__.py  config.yml
scripts/figures/config/mermaid_templates/: architecture_template.mmd  methodology_template.mmd  sequence_template.mmd
scripts/figures/generators/: __init__.py  generate_all.py  generate_enhanced_mermaid.py  generate_figure1.py  generate_figure2.py  generate_mermaid.py  mine_preprint_data.py  test_figures.py
scripts/figures/utils/: __init__.py  matplotlib_config.py  seaborn_config.py
src/: mermaid-config.json
src/bibliography/: references.bib
src/data/: README.md
src/docker/: .dockerignore  Dockerfile  README.md  build-multiarch.sh  build.env  build.sh  dev.sh  docker-compose.yml  manage.sh  quick-build.sh  run.sh  setup.sh  shell.sh  test.sh
src/figures/: Figure1_placeholder.txt  Figure2_placeholder.txt
src/figures/supplementary/: SupplementaryFigure1_placeholder.txt
src/logo/: logo-rxiv-forge.afdesign  logo-rxiv-maker.afdesign
src/py/: __init__.py  _version.py  utils.py
src/py/commands/: __init__.py  analyze_word_count.py  copy_pdf.py  generate_article.py  generate_docs.py  generate_figures.py  generate_preprint.py  validate.py
src/py/converters/: __init__.py  citation_processor.py  code_processor.py  figure_processor.py  html_processor.py  list_processor.py  md2tex.py  md2tex_new.py  section_processor.py  supplementary_note_processor.py  table_processor.py  text_formatters.py  types.py  url_processor.py
src/py/debug/: __init__.py  debug_conversion.py
src/py/processors/: __init__.py  author_processor.py  template_processor.py  yaml_processor.py
src/py/scripts/: __init__.py  custom_doc_generator.py  fix_minted.py  validate_manuscript.py
src/py/utils/: __init__.py  email_encoder.py
src/py/validators/: base_validator.py  citation_validator.py  figure_validator.py  latex_error_parser.py  math_validator.py  reference_validator.py  syntax_validator.py
src/tex/: main.tex  template.tex
src/tex/py/: generate_article.py  md2tex.py
src/tex/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methods.tex  results.tex  supplementary.tex
src/tex/style/: HenriquesLab_style.bst  HenriquesLab_style.cls  README.md  rxiv_maker_style.cls  rxiv_maker_style_arxiv.cls
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_article_generation.py  test_docker_implementation.py  test_documentation_generation.py  test_manuscript_directory_integration.py  test_platform_integration.py  test_practical_manuscript_workflows.py  test_supplementary_formatting.py  test_validation_workflow.py
tests/notebooks/: test_rxiv_maker_colab.py
tests/unit/: __init__.py  test_author_processor.py  test_docker_multiarch.py  test_docker_scripts.py  test_email_encoder.py  test_generate_docs.py  test_md2tex.py  test_supplementary_note_processor.py  test_table_rotation.py  test_template_processor.py  test_text_formatters.py  test_utils.py  test_validators.py  test_yaml_processor.py
