[build-system]
requires = ["setuptools>=61.0", "wheel", "versioneer[toml]==0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "rxiv-maker"
dynamic = ["version"]
description = "Automated LaTeX article generation with figure creation capabilities"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "Pillow>=9.0.0",
    "pypdf>=3.0.0",
    "PyYAML>=6.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "py>=1.11.0,<2.0",
    "ruff>=0.8.0",
    "mypy>=1.0",
    "nox>=2023.0.0",
    "pytest-cov>=4.0",
    "coverage[toml]>=7.0",
    "lazydocs>=0.4.8",
    "pytest-notebook>=0.10.0",
    "nbstripout>=0.7.1",
    "pre-commit>=4.0.0",
]

# Ruff configuration (replaces black, isort, flake8, autoflake, docformatter)
[tool.ruff]
# Set the maximum line length to match Black
line-length = 88
target-version = "py39"
exclude = [
    "versioneer.py",
    "rxiv_maker_colab.ipynb",
]

[tool.ruff.lint]
# Enable the following rule sets
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "D",    # pydocstyle
    "SIM",  # flake8-simplify
]

# Ignore specific rules that conflict with Black or are too strict
ignore = [
    "E203",  # whitespace before ':'
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use spaces around the equals sign in keyword arguments
skip-magic-trailing-comma = false
# Prefer hanging indents for function arguments
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["rxiv_maker"]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Ignore certain rules in test files
"tests/*" = ["D"]
# Ignore auto-generated files
"src/py/_version.py" = ["ALL"]
"versioneer.py" = ["ALL"]
"rxiv_maker_colab.ipynb" = ["ALL"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
explicit_package_bases = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/py"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "notebook: marks tests as notebook tests",
    "docker: marks tests as requiring Docker (deselect with '-m \"not docker\"')",
    "docker_build: marks tests as requiring Docker build capabilities",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Versioneer configuration
[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/py/_version.py"
versionfile_build = "py/_version.py"
tag_prefix = "v"
parentdir_prefix = "rxiv-maker-"
